Gerrit_working_combination/ingresssecret.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tls-ingress
spec:
  tls:
  - hosts:
      - ec2-18-219-140-179.us-east-2.compute.amazonaws.com
    secretName: grrit-secret
  rules:
  - host: ec2-18-219-140-179.us-east-2.compute.amazonaws.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gerrit-service
          servicePort: 8080
********

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: gerrit-service
          servicePort: 8080
